tests/return/return.exp
Error ------------------------------------------------------------------------------------------ function_return.js:7:24

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   7| function f(x: number): number {
                             ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ function_return.js:23:3

Cannot return undefined because undefined [1] is incompatible with number [2]. [incompatible-return]

   function_return.js:23:3
   23|   return;
         ^^^^^^^ [1]

References:
   function_return.js:19:24
   19| function h(x: number): number {
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- implicit.js:6:22

Cannot expect number as the return type of async function because number [1] is incompatible with implicitly-returned
`Promise`. [incompatible-return]

   6| async function g1(): number {}
                           ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- implicit.js:7:30

Cannot expect `Promise` as the return type of async function because number [1] is incompatible with implicitly-returned
undefined in type argument `R` [2]. [incompatible-return]

   implicit.js:7:30
      7| async function g2(): Promise<number> {}
                                      ^^^^^^ [1]

References:
   <BUILTINS>/core.js:1838:24
   1838| declare class Promise<+R = mixed> {
                                ^ [2]


Error ------------------------------------------------------------------------------------------ implicit_void.js:187:19

Cannot use `invariant()` [1] as a superclass. Only variables and member expressions may be extended [invalid-extends]

   187|   class C extends invariant() {
                          ^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:236:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   236| function g1(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:243:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   243| function g2(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:251:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   251| function g3(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:259:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   259| function g4(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:267:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   267| function g5(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:276:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   276| function g6(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:284:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   284| function g7(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:297:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   297| function g8(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:310:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   310| function g9(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:325:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   325| function g10(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:331:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   331| function g11(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:338:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   338| function g12(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:354:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   354| function g13(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:359:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   359| function g14(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:366:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   366| function g15(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:373:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   373| function g16(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:380:26

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   380| function g17(x: Object): number { // Error
                                 ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:388:35

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   388| function g18(x: 'a' | 'b' | 'c'): number { // Error
                                          ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:397:26

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   397| function g19(x: string): number { // Error
                                 ^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- void.js:12:2

Cannot cast `f(...)` to undefined because string [1] is incompatible with undefined [2]. [incompatible-cast]

   void.js:12:2
   12| (f(true): void); // error: string ~> void
        ^^^^^^^

References:
   void.js:8:12
    8|     return "nope";
                  ^^^^^^ [1]
   void.js:12:11
   12| (f(true): void); // error: string ~> void
                 ^^^^ [2]



Found 25 errors
